Fixed gap in headings

--- a/css/sass/components/_element-information.scss
+++ b/css/sass/components/_element-information.scss
@@ -36,6 +36,7 @@
     border-radius: 20px 0px 20px 0px;
     background-color: $color4;
     padding: 20px;
+    padding-top: 0;
     flex-basis: 28%;
     margin-bottom: 20px;
     margin-right: 10px;
