--- a/css/styles.css
+++ b/css/styles.css
@@ -243,6 +243,7 @@ a {
   border-radius: 20px 0px 20px 0px;
   background-color: #535353;
   padding: 20px;
+  padding-top: 0;
   flex-basis: 28%;
   margin-bottom: 20px;
   margin-right: 10px;
